--- a/hyperkitty/templates/hyperkitty/fragments/overview_threads.html
+++ b/hyperkitty/templates/hyperkitty/fragments/overview_threads.html
@@ -29,11 +29,11 @@
                 {% endif %}
                 <ul class="list-unstyled pull-right list-stats">
                     <li>
-                        <i class="icomoon participant"></i>
+                        <i class="fa fa-user"></i>
                         {{ thread.participants_count }}
                     </li>
                     <li>
-                        <i class="icomoon discussion"></i>
+                        <i class="fa fa-comment"></i>
                         {{ thread|num_comments }}
                     </li>
                     <li class="hidden-tn">
