--- a/hyperkitty/templates/hyperkitty/index.html
+++ b/hyperkitty/templates/hyperkitty/index.html
@@ -137,7 +137,7 @@
                         </div>
                         <ul class="list-stats list-unstyled">
                             <li>
-                                <i class="icomoon participant"></i>
+                                <i class="fa fa-user"></i>
                                 {% if mlist.can_view %}
                                 {{ mlist.recent_participants_count|default_if_none:"..." }}
                                 {% else %}
@@ -146,7 +146,7 @@
                                 {% trans 'participants' %}
                             </li>
                             <li>
-                                <i class="icomoon discussion"></i>
+                                <i class="fa fa-comments"></i>
                                 {% if mlist.can_view %}
                                 {{ mlist.recent_threads_count|default_if_none:"..." }}
                                 {% else %}
@@ -221,7 +221,7 @@
                         </div>
                         <ul class="list-stats list-unstyled">
                             <li>
-                                <i class="icomoon participant"></i>
+                                <i class="fa fa-user"></i>
                                 {% if mlist.can_view %}
                                 {{ mlist.recent_participants_count|default_if_none:"..." }}
                                 {% else %}
@@ -230,7 +230,7 @@
                                 {% trans 'participants' %}
                             </li>
                             <li>
-                                <i class="icomoon discussion"></i>
+                                <i class="fa fa-comments"></i>
                                 {% if mlist.can_view %}
                                 {{ mlist.recent_threads_count|default_if_none:"..." }}
                                 {% else %}
