--- a/hyperkitty/templates/hyperkitty/overview.html
+++ b/hyperkitty/templates/hyperkitty/overview.html
@@ -158,8 +158,8 @@
             {% trans "the past <strong>30</strong> days:" %}
         </p>
         <ul class="list-stats list-unstyled">
-            <li><i class="icomoon participant"></i>{{ mlist.recent_participants_count }} {% trans "participants" %}</li>
-            <li><i class="icomoon discussion"></i>{{ mlist.recent_threads.count }} {% trans "discussions" %}</li>
+            <li><i class="fa fa-user"></i>{{ mlist.recent_participants_count }} {% trans "participants" %}</li>
+            <li><i class="fa fa-comments"></i>{{ mlist.recent_threads.count }} {% trans "discussions" %}</li>
         </ul>
 
         <div class="row">
