--- a/hyperkitty/templates/hyperkitty/search_results.html
+++ b/hyperkitty/templates/hyperkitty/search_results.html
@@ -40,7 +40,7 @@
             {% endif %}
             <ul class="list-unstyled list-stats col-tn-12 col-sm-6 col-md-4">
                 <li>
-                    <span class="icomoon discussion"></span>
+                    <span class="fa fa-comment"></span>
                     {{ emails.paginator.count }} {% trans "messages" %}
                 </li>
             </ul>
