--- a/hyperkitty/templates/hyperkitty/threads/summary_thread_large.html
+++ b/hyperkitty/templates/hyperkitty/threads/summary_thread_large.html
@@ -46,11 +46,11 @@
                         </div>
                         <ul class="list-unstyled list-stats col-tn-12 col-sm-5 col-xl-3">
                             <li>
-                                <i class="icomoon participant"></i>
+                                <i class="fa fa-user"></i>
                                 {{ thread.participants_count }} {% trans "participants" %}
                             </li>
                             <li>
-                                <i class="icomoon discussion"></i>
+                                <i class="fa fa-comment"></i>
                                 {{ thread|num_comments }} {% trans "comments" %}
                             </li>
                         </ul>
