--- a/hyperkitty/templates/hyperkitty/thread_list.html
+++ b/hyperkitty/templates/hyperkitty/thread_list.html
@@ -74,8 +74,8 @@ $(document).ready(function() {
     $('span.expander').expander({
         slicePoint: 100,
         /* FIXME: the \n's below don't actually work. (mizmo) */
-        userCollapseText : '\n[View Less]',
-        expandText : '\n[View More]',
+        userCollapseText : '&nbsp;[View Less]',
+        expandText : '&nbsp;[...]',
         beforeExpand: function() {
             $(this).removeClass("collapsed");
             $(this).addClass("expanded");
