--- a/hyperkitty/templates/hyperkitty/threads/summary_thread_large.html
+++ b/hyperkitty/templates/hyperkitty/threads/summary_thread_large.html
@@ -16,7 +16,7 @@
 							{% endif %}
 							<!-- {{ starting_email.sender.name|escapeemail }} -->
 						</div>
-						<div class="col-tn-10">
+						<div class="col-tn-8">
 							<span class="thread-title">
 								<a name="{{thread.thread_id}}"
 									href="{% url 'hk_thread' threadid=thread.thread_id mlist_fqdn=mlist.name %}"
@@ -32,38 +32,30 @@
 									{{ starting_email.subject|strip_subject:mlist }}
 								</a>
 							</span>
+							<div>by {{ thread.starting_email.sender.name }}</div>
+							<span class="expander collapsed" style="color: #999">
+								{{ starting_email.content|urlizetrunc:76|escapeemaillinks }}
+							</span>
+						</div>
+						<div class="col-tn-3">
 							<span class="thread-date"
 								title="{{ thread.date_active|date:'l, j F Y H:i:s' }}">
 								<i class="fa fa-clock-o" title="{% trans 'Most recent thread activity' %}"></i>
 								{{ thread.date_active|timesince }}
 							</span>
-						</div>
-					</div>
-					<div class="thread-email row">
-						<div class="col-tn-6 col-tn-offset-1">
-						by {{ thread.starting_email.sender.name }}
-						</div>
-					</div>
-					<div class="thread-email row">
-						<div class="col-tn-7 col-tn-offset-1">
-							<span class="expander collapsed" style="color: #999">
-								{{ starting_email.content|urlizetrunc:76|escapeemaillinks }}
-							</span>
-                        </div>
-                        <div class="col-tn-4">
-							<div class="col-tn-12 col-xs-6 col-sm-4 col-xl-3">
-								{% include "hyperkitty/fragments/like_form.html" with message_id_hash=starting_email.message_id_hash object=thread %}
-							</div>
-							<ul class="list-unstyled list-stats col-tn-12 col-sm-5 col-xl-3">
+							<ul class="list-unstyled list-stats">
 								<li>
 									<i class="fa fa-user"></i>
-									{{ thread.participants_count }} {% trans "participants" %}
+									{{ thread.participants_count }} <!-- {% trans "participants" %} -->
 								</li>
-                            <li>
-                                <i class="fa fa-comment"></i>
-                                {{ thread|num_comments }} {% trans "comments" %}
-                            </li>
-                        </ul>
+								<li>
+									<i class="fa fa-comment"></i>
+									{{ thread|num_comments }} <!-- {% trans "comments" %} -->
+								</li>
+								<li>
+									{% include "hyperkitty/fragments/like_form.html" with message_id_hash=starting_email.message_id_hash object=thread %}
+								</li>
+							</ul>
                         </div>
                     </div>
                     <div class="thread-extras row">
