final tweaking of visual style of expander for threads list

--- a/hyperkitty/static/hyperkitty/sass/_hyperkitty-threadslist.scss
+++ b/hyperkitty/static/hyperkitty/sass/_hyperkitty-threadslist.scss
@@ -142,7 +142,12 @@
 }
 
 .btn-expander {
-  
+  background: #efefef;
+  padding: 1px 5px;
+  vertical-align: middle !important;
+  font-size: .8em;
+  display: inline-block;
+  margin-top: 1em;
 }
 
 .thread-email {
