--- a/hyperkitty/templates/hyperkitty/message.html
+++ b/hyperkitty/templates/hyperkitty/message.html
@@ -14,7 +14,7 @@
 
 {% include 'hyperkitty/fragments/month_list.html' %}
 
-    <div class="col-md-7">
+    <div class="col-tn-12 col-sm-10">
 
         <div class="message-header row">
         <div class="col-tn-2 message-back">
@@ -28,9 +28,16 @@
         </div>
         </div>
 
-        <section id="thread-content">
-            {% include 'hyperkitty/messages/message.html' with email=message unfolded='True' %}
-        </section>
+        <div class="row">
+            <div class="col-sm-9">
+                <section id="thread-content">
+                    {% include 'hyperkitty/messages/message.html' with email=message unfolded='True' %}
+                </section>
+            </div>
+            <div class="col-sm-3">
+                {% include 'hyperkitty/messages/right_col.html' %}
+            </div>
+        </div>
 
     </div>
 
