Rename bootstrap form tag

--- a/hyperkitty/templates/account/login.html
+++ b/hyperkitty/templates/account/login.html
@@ -35,7 +35,7 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 {% endif %}
 
 <form class="login form-horizontal" method="POST" action="{% url 'account_login' %}">
-  {% render_form_horizontal form 2 4 %}
+  {% bootstrap_form_horizontal form 2 4 %}
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
