--- a/hyperkitty/templates/account/password_reset.html
+++ b/hyperkitty/templates/account/password_reset.html
@@ -16,7 +16,7 @@
     <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
 
     <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset form-horizontal">
-        {% render_form_horizontal form 2 4 %}
+        {% bootstrap_form_horizontal form 2 4 %}
         <div class="form-group">
           <div class="col-md-offset-2 col-md-10">
             <button class="btn btn-primary" type="submit">{% trans "Reset My Password" %}</button>
