--- a/hyperkitty/templates/socialaccount/signup.html
+++ b/hyperkitty/templates/socialaccount/signup.html
@@ -12,7 +12,7 @@
 {{site_name}}. As a final step, please complete the following form:{% endblocktrans %}</p>
 
 <form class="signup form-horizontal" id="signup_form" method="post" action="{% url 'socialaccount_signup' %}">
-  {% render_form_horizontal form 2 4 %}
+  {% bootstrap_form_horizontal form 2 4 %}
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
