--- a/hyperkitty/templates/socialaccount/connections.html
+++ b/hyperkitty/templates/socialaccount/connections.html
@@ -1,6 +1,7 @@
 {% extends "hyperkitty/user_profile/base.html" %}
 
 {% load i18n %}
+{% load staticfiles %}
 
 {% block user_profile_content %}
 
@@ -21,7 +22,7 @@
 <div class="radio">
 <label for="id_account_{{ base_account.id }}">
 <input id="id_account_{{ base_account.id }}" type="radio" name="account" value="{{ base_account.id }}"/>
-<i class="fa fa-{{ account.get_brand.id }}"></i>
+<img alt="" src="{% static 'django-mailman3/img/login/' %}{{ account.get_brand.id }}.png" />
 <span class="socialaccount_provider {{ base_account.provider }} {{ account.get_brand.id }}">{{account.get_brand.name}}</span>:
 {{ account }}
 </label>
