--- a/hyperkitty/templates/hyperkitty/fragments/send_as.html
+++ b/hyperkitty/templates/hyperkitty/fragments/send_as.html
@@ -11,7 +11,7 @@
         but there's a big risk of a user loosing the message they
         are composing.
     {% endcomment %}
-    <a href="{% url 'user_profile' %}"
+    <a href="{% url 'mm_user_profile' %}"
        target="_blank" class="send-as-add-address">
         {% trans "Link another address" %}
         <i class="fa fa-external-link" aria-hidden="true"></i></a>
