--- a/hyperkitty/templates/hyperkitty/base.html
+++ b/hyperkitty/templates/hyperkitty/base.html
@@ -77,26 +77,42 @@
                 <!-- only show this extra button/dropdown if we're in small screen sizes -->
                 <div class="nav navbar-nav navbar-right auth dropdown navbar-form hidden-tn hidden-xs hidden-md hidden-lg">
                     <button type="button" class="btn dropdown-toggle" id="loginDropdownMenu" data-toggle="dropdown">
-                        <span class="fa fa-bars"></span>
+                        {% if user.is_authenticated %}
+                            {% gravatar user.email 20 %}
+                        {% else %}
+                            <span class="fa fa-bars"></span>
+                        {% endif %}
                     </button>
                     <ul class="dropdown-menu" role="menu" aria-labelledby="loginDropdownMenu">
-                        {% if 'postorius' in INSTALLED_APPS %}
-                        <li role="presentation">
-                            <a role="menuitem" tabindex="-1" class="postorius" href="{% url 'list_index' %}">{% trans 'Manage lists' %}</a>
-                        </li>
-                        <li role="separator" class="divider"></li>
-                        {% endif %}
                         {% if user.is_authenticated %}
-                            <li role="presentation"><a role="menuitem" tabindex="-1" href="{% url 'mm_user_profile' %}">{% trans 'Account' %}</a></li>
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href="{% url 'mm_user_profile' %}">
+                                <span class="fa fa-user"></span>
+                                {% trans 'Account' %}
+                            </a></li>
                             {% if 'postorius' in INSTALLED_APPS %}
-                            <li role="presentation"><a role="menuitem" tabindex="-1" href="{% url 'ps_user_profile' %}">{% trans 'Mailman settings' %}</a></li>
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href="{% url 'ps_user_profile' %}">
+                                <span class="fa fa-cog"></span>
+                                {% trans 'Mailman settings' %}
+                            </a></li>
                             {% endif %}
-                            <li role="presentation"><a role="menuitem" tabindex="-1" href="{% url 'hk_user_profile' %}">{% trans 'Posting activity' %}</a></li>
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href="{% url 'hk_user_profile' %}">
+                                <span class="fa fa-comments"></span>
+                                {% trans 'Posting activity' %}
+                            </a></li>
                             <li role="separator" class="divider"></li>
-                            <li role="presentation"><a role="menuitem" tabindex="-1" href="{% url LOGOUT_URL %}?next={% url 'hk_root' %}">{% trans "Logout" %}</a></li>
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href="{% url LOGOUT_URL %}?next={% url 'hk_root' %}">
+                                <span class="fa fa-sign-out"></span>
+                                {% trans "Logout" %}
+                            </a></li>
                         {% else %}
-                            <li role="presentation"><a role="menuitem" tabindex="-1" href="{% url LOGIN_URL %}?next={{next|default:request.path|urlencode}}">{% trans "Login" %}</a></li>
-                            <li role="presentation"><a role="menuitem" tabindex="-1" href="{% url 'account_signup' %}?next={{next|default:request.path|urlencode}}">{% trans "Sign Up" %}</a></li>
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href="{% url LOGIN_URL %}?next={{next|default:request.path|urlencode}}">
+                                <span class="fa fa-sign-in"></span>
+                                {% trans "Login" %}
+                            </a></li>
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href="{% url 'account_signup' %}?next={{next|default:request.path|urlencode}}">
+                                <span class="fa fa-user-plus"></span>
+                                {% trans "Sign Up" %}
+                            </a></li>
                         {% endif %}
                     </ul>
                 </div>
@@ -111,27 +127,51 @@
                                 <span class="caret"></span>
                             </a>
                             <ul class="dropdown-menu">
-                                <li><a href="{% url 'mm_user_profile' %}">{% trans 'Account' %}</a></li>
+                                <li><a href="{% url 'mm_user_profile' %}">
+                                    <span class="fa fa-user"></span>
+                                    {% trans 'Account' %}
+                                </a></li>
                                 {% if 'postorius' in INSTALLED_APPS %}
-                                <li><a href="{% url 'ps_user_profile' %}">{% trans 'Mailman settings' %}</a></li>
+                                <li><a href="{% url 'ps_user_profile' %}">
+                                    <span class="fa fa-cog"></span>
+                                    {% trans 'Mailman settings' %}
+                                </a></li>
                                 {% endif %}
-                                <li><a href="{% url 'hk_user_profile' %}">{% trans 'Posting activity' %}</a></li>
+                                <li><a href="{% url 'hk_user_profile' %}">
+                                    <span class="fa fa-comments"></span>
+                                    {% trans 'Posting activity' %}
+                                </a></li>
                                 <li role="separator" class="divider"></li>
-                                <li><a href="{% url LOGOUT_URL %}?next={% url 'hk_root' %}">{% trans "Logout" %}</a></li>
+                                <li><a href="{% url LOGOUT_URL %}?next={% url 'hk_root' %}">
+                                    <span class="fa fa-sign-out"></span>
+                                    {% trans "Logout" %}
+                                </a></li>
                             </ul>
                         </li>
                     {% else %}
-                        <li><a href="{% url LOGIN_URL %}?next={{next|default:request.path|urlencode}}">{% trans "Login" %}</a></li>
-                        <li><a href="{% url 'account_signup' %}?next={{next|default:request.path|urlencode}}">{% trans "Sign Up" %}</a></li>
+                        <li><a href="{% url LOGIN_URL %}?next={{next|default:request.path|urlencode}}">
+                            <span class="fa fa-sign-in"></span>
+                            {% trans "Login" %}
+                        </a></li>
+                        <li><a href="{% url 'account_signup' %}?next={{next|default:request.path|urlencode}}">
+                            <span class="fa fa-user-plus"></span>
+                            {% trans "Sign Up" %}
+                        </a></li>
                     {% endif %}
                 </ul>
 
                 {% if 'postorius' in INSTALLED_APPS %}
                 <ul class="nav navbar-nav navbar-right"><li>
                     {% if mlist %}
-                    <a href="{% url 'list_summary' mlist.list_id %}">{% trans 'Manage this list' %}</a>
+                    <a href="{% url 'list_summary' mlist.list_id %}">
+                        <span class="fa fa-cog"></span>
+                        {% trans 'Manage this list' %}
+                    </a>
                     {% else %}
-                    <a href="{% url 'list_index' %}">{% trans 'Manage lists' %}</a>
+                    <a href="{% url 'list_index' %}">
+                        <span class="fa fa-cog"></span>
+                        {% trans 'Manage lists' %}
+                    </a>
                     {% endif %}
                 </li></ul>
                 {% endif %}
