Toggle message font on click

--- a/hyperkitty/static/hyperkitty/sass/_hyperkitty-common.scss
+++ b/hyperkitty/static/hyperkitty/sass/_hyperkitty-common.scss
@@ -58,6 +58,10 @@ h1 {
     text-transform: uppercase;
 }
 
+.cursor-pointer {
+    cursor: pointer;
+}
+
 // typical hover behavior for table rows
 .row-hover {
     cursor: pointer;
