Improve the 'find list' field on the index page

--- a/hyperkitty/templates/hyperkitty/index.html
+++ b/hyperkitty/templates/hyperkitty/index.html
@@ -103,9 +103,7 @@
     </div>
     <div class="pull-right col-tn-12 col-xs-5 col-md-3">
         <form method="get" action="">
-            <input type="hidden" name="url-tpl"
-                   value="{% url 'hk_list_overview' 'PLACEHOLDER@PLACEHOLDER' %}" />
-            <input name="search" type="text" class="form-control" id="focusedInput"
+            <input name="name" type="text" class="form-control" id="focusedInput"
                    placeholder="{% trans 'Find list' %}"
                    />
         </form>
